--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 body{
-    /*background-color: rgb(241, 245, 247);*/
+    /*background-color: rgb(241, 245, 247);
     background-image: url(img.jpg);
-     margin-left: 40%;
-    margin-top: 20px;
-    margin-right: 25%;
-    font-family: Arial, Helvetica, sans-serif;
     background-size:cover;
-    background-repeat: no-repeat;
-    border: 10px ;
+    background-repeat: no-repeat;*/
+    background-image:url('../images/img.jpg');
+background-repeat:no-repeat;
+background-size:100% 150%;
 
     }
 
@@ -18,6 +16,12 @@ body h2{
     /*padding-bottom: 20px;*/
 }
 
+body{
+    margin-left: 37%;
+    margin-top: 20px;
+    margin-right: 27%;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 #error{
     /*background-color: red;
